--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint":"eslint *.js **/*.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
+    "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -28,6 +31,7 @@
     "react-navigation-drawer": "^2.6.0",
     "react-navigation-header-buttons": "^6.0.0",
     "react-navigation-stack": "^2.10.2",
+    "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -37,7 +41,15 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0"
   },
   "private": true
 }
