--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint":"eslint *.js **/*.js"
+    "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
@@ -49,7 +49,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-native": "^3.10.0"
+    "eslint-plugin-react-native": "^3.10.0",
+    "eslint-plugin-redux-saga": "^1.2.1"
   },
   "private": true
 }
