--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.21.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-react-native-web": "^0.14.9",
+    "babel-plugin-react-transform": "^3.0.0",
     "expo": "~39.0.2",
+    "expo-file-system": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-media-library": "~9.2.1",
+    "expo-permissions": "~9.3.0",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "prop-types": "^15.7.2",
@@ -22,10 +33,12 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.6.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
@@ -38,11 +51,17 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "uuid": "^8.3.1"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.10.1",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.9.6",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
