--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "expo-image-picker": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
