--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "0.1.10",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-native-web": "^0.14.9",
@@ -29,6 +29,7 @@
     "expo-permissions": "~9.3.0",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -53,7 +54,6 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
@@ -63,6 +63,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-es2015": "^6.24.1",
+    "depcheck": "^1.3.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -70,8 +71,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.10.0",
-    "eslint-plugin-redux-saga": "^1.2.1",
-    "prop-types": "^15.7.2"
+    "eslint-plugin-redux-saga": "^1.2.1"
   },
   "private": true
 }
